# ai-qa-copilot

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.json  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs-validation.yml
apps/api/: pyproject.toml
apps/api/src/ai_qa_copilot_api/: __init__.py  main.py
apps/api/tests/: test_dev_lifecycle.py  test_health.py
apps/web/: package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md  BACKLOG.md  CONTROL_TRACEABILITY_MATRIX.md  EVALUATION_PLAN.md  PRODUCT_REQUIREMENTS.md  PROJECT_CHARTER.md  PROJECT_STATUS.md  REPOSITORY_GOVERNANCE.md  SKILLS_PROFILE.md  THREAT_MODEL.md
docs/adr/: ADR-001-modular-monolith.md  ADR-002-direct-responses-orchestration.md  ADR-003-hybrid-retrieval.md  ADR-004-safe-http-execution-topology.md  ADR-005-aws-serverless-and-database.md  ADR-006-public-demo-data-policy.md  ADR-007-three-level-evaluation.md  ADR-008-cognito-owner-guest-authorization.md  ADR-009-parser-isolation.md  ADR-010-canonical-report-revisions.md  README.md
docs/evidence/github-security-2026-07-21/: README.md
fixtures/: sample-openapi.yaml  sample-requirements.md
fixtures/benchmark/: README.md  fixture-manifest.v1.yaml  ground-truth.v1.yaml
scripts/: docs_integrity.py  generate_manifest.py  tasks.py  validate_docs.py
